--- a/UWPApp.json
+++ b/UWPApp.json
@@ -8714,9 +8714,8 @@
     "FFlagRbxStorageSkipOldCacheSize": true,
     "FFlagStudioDockingDisableCorruptionChecks": true,
     "DFFlagSessionTrackingAddAndroidSocAndSku": true,
-    "FFlagNavigationUseBuildImprovedRegions4": true,
     "FFlagPathfindingSupportPartialPath4": false,
-    "FFlagPathfindingUseImprovedSearch4": false,
+    "FFlagPathfindingUseImprovedSearch4": true,
     "FFlagLegacyFindReplaceUsageTelemetry": true,
     "FFlagEnableCoreScriptAndPluginActorVMPools": true,
     "FFlagEnableScriptRuntime3": true,
@@ -9148,7 +9147,7 @@
     "DFIntSessionTrackingSendType": 2,
     "FFlagLuaAppLoadOtaPackagesOnStart2": true,
     "FFlagEditableImageTelemetryUpdates": true,
-    "DFIntNavigationRasterizeTileSlowReportThreshold": 200,
+    "DFIntNavigationRasterizeTileSlowReportThreshold": 10000,
     "FFlagAssetImportUploadWidgetCleanup3": true,
     "FFlagRibbonEnableSliderLua": true,
     "FIntOtaLoaderCheckpointEventHundredthsPercent": 1,
@@ -9634,7 +9633,6 @@
     "FIntReactMicroprofilerLevel2": 1,
     "FFlagRemoveSubMenuTopBarConstants": true,
     "FFlagLCCheckCageDimNonSkinnedNonUniform": true,
-    "FFlagRemoveKDTree2_IXP": "1;Portal.FFlagRemoveKDTree2;FFlagRemoveKDTree2;719251750;flagbank",
     "FFlagLegacyAccessoryCheckCategory": true,
     "FFlagLuauVectorFolding": true,
     "DFFlagMicroprofilerThreadSearch": true,
@@ -9745,22 +9743,12 @@
     "FFlagAXDisableBundleTrade": true,
     "FFlagAXEnableCollectiblePurchaseInfoParamRefactor": true,
     "FFlagFCUpdateNormalsOnlyForLCs": true,
-    "DFFlagDisconnectCodeUseEnum2": true,
-    "FFlagEnablePlatformSocialGraphSync1": true,
-    "FFlagPathfindingUseImprovedSearch4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:18:13",
-    "FFlagAXShareAvatarPromptEasyDismiss_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:23:04",
-    "FFlagLuaAppFixOmniFeedRefreshEffect_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:24:43",
     "FFlagInExperienceMenuCanvasGroupsInvisible": true,
     "FFlagAXEnableItemOwnershipPageResellableFix": true,
     "FFlagAXEnableSelectItemPromptRefactor": true,
     "FFlagAXEnableItemOwnershipPageSerialFix": true,
     "FFlagGuiServiceDeferGLCModifyUpdateVector": true,
     "FFlagRemovePSMListenerForDialog": true,
-    "FFlagThirdPartyTextChatPermissionsApiEnabled1_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:40:15",
-    "FFlagEnableLocationRecording_Staged": "false;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:49:44",
-    "FFlagEnableLocationRecordingDeltaFiltering_Staged": "false;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:49:44",
-    "DFFlagMakeBezierEvaluationFast2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:53:16",
-    "DFIntNavigationRasterizeTileSlowReportThreshold_Rollout": "10000;60;2025-01-21T22:55:41",
     "FFlagAXFixFloatingAvatar": true,
     "FFlagAutoSetupMissingDynamicHeadAllowed": true,
     "FFlagAvatarPreviewerBetterUI2": true,
@@ -9768,9 +9756,39 @@
     "FFlagAvatarPreviewerSafeCharaterEncoding": true,
     "FFlagAvatarPreviewerUseHeadPreviewWithMotor6D": true,
     "FFlagHumanoidModelScalingFix": true,
-    "DFFlagAndroidOnTrimMemoryLevelTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T23:08:49",
     "FFlagStudioPreAllocateUniqueIdCollisionDetectorMaps": true,
     "FFlagRemoveUnusedAccountInfoRequest": true,
+    "FFlagAXShareAvatarPromptEasyDismiss": true,
+    "FFlagLuaAppFixOmniFeedRefreshEffect": true,
+    "DFFlagDisconnectCodeUseEnum2": true,
+    "FFlagThirdPartyTextChatPermissionsApiEnabled1": true,
+    "FFlagEnableLocationRecording": false,
+    "FFlagEnableLocationRecordingDeltaFiltering": false,
+    "DFFlagMakeBezierEvaluationFast2": true,
+    "DFFlagAndroidOnTrimMemoryLevelTelemetry": true,
+    "FFlagWindowsAppBuildVariant": true,
+    "FFlagAvatarPreviewerCheckFaceItems": true,
+    "FFlagNoHashingScalingValues": true,
+    "FFlagFixGameTileViewActivatedCallback": true,
+    "FStringRewardedVideoAdsUniverseIdAllowlist": "1202096104,184199275,2549475383,4908792642,5422546686",
+    "FFlagEnableHideSystemCardLocalUserAvatar": true,
+    "FFlagRenderChatConversationOnlyWhenVisible": true,
+    "FFlagVideoStreamAdaptiveBitrate3": true,
+    "FFlagRequireByStringErrorImprovements_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T18:52:40",
+    "DFFlagEnableRccOomDMDump": true,
+    "DFFlagUseMemoryProfiler2": true,
+    "FFlagFixMappedSignalRaceCondition": true,
+    "FFlagStudio3dViewFocusOnCreateConstraint2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T19:11:11",
+    "FFlagUseBubbleChatBillboardV4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T19:14:14",
+    "FFlagGamePassGameDetailsForce": true,
+    "FFlagRequireByStringEnabled": true,
+    "FFlagRobloxTelemetryUseEventIngestBatchEvent22_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T19:26:21",
+    "FFlagStudioContextExpressionTypes3": true,
+    "FFlagStudioClipboardContext": true,
+    "FFlagStudioInternalWaitForLongProcessButton": true,
+    "FFlagPackagifySettingsShowSignal": true,
+    "FFlagRequireByStringFixRequireTracingForInit": true,
+    "FFlagRequireByStringTracingEnabled": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9988,9 +10006,8 @@
     "FFlagTaskSchedulerRescheduleAsBackground": true,
     "DFFlagFlagRolloutTestDynamicBool3": true,
     "FFlagUwpMarshalStoreErrors": true,
-    "DFFlagPreemptCrashpadExceptionHandlerOnWindows": true,
-    "FStringFlagRepoGitHashFastString": "57b31d59da9d723bc0fe97fbd497bb5e765627a6",
-    "DFStringFlagRepoGitHashDynamicString": "57b31d59da9d723bc0fe97fbd497bb5e765627a6",
-    "FStringFlipTimeStampFastString": "2025-01-21T23:15:56.306Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-21T23:15:56.306Z"
+    "FStringFlagRepoGitHashFastString": "114c1f7eb8ddfeed9f2badf2676426d6bbce2521",
+    "DFStringFlagRepoGitHashDynamicString": "114c1f7eb8ddfeed9f2badf2676426d6bbce2521",
+    "FStringFlipTimeStampFastString": "2025-01-22T19:42:29.860Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-22T19:42:29.860Z"
 }
