--- a/iOSApp.json
+++ b/iOSApp.json
@@ -8714,9 +8714,8 @@
     "FFlagRbxStorageSkipOldCacheSize": true,
     "FFlagStudioDockingDisableCorruptionChecks": true,
     "DFFlagSessionTrackingAddAndroidSocAndSku": true,
-    "FFlagNavigationUseBuildImprovedRegions4": true,
     "FFlagPathfindingSupportPartialPath4": false,
-    "FFlagPathfindingUseImprovedSearch4": false,
+    "FFlagPathfindingUseImprovedSearch4": true,
     "FFlagLegacyFindReplaceUsageTelemetry": true,
     "FFlagEnableCoreScriptAndPluginActorVMPools": true,
     "FFlagEnableScriptRuntime3": true,
@@ -9148,7 +9147,7 @@
     "DFIntSessionTrackingSendType": 2,
     "FFlagLuaAppLoadOtaPackagesOnStart2": true,
     "FFlagEditableImageTelemetryUpdates": true,
-    "DFIntNavigationRasterizeTileSlowReportThreshold": 200,
+    "DFIntNavigationRasterizeTileSlowReportThreshold": 10000,
     "FFlagAssetImportUploadWidgetCleanup3": true,
     "FFlagRibbonEnableSliderLua": true,
     "FIntOtaLoaderCheckpointEventHundredthsPercent": 1,
@@ -9634,7 +9633,6 @@
     "FIntReactMicroprofilerLevel2": 1,
     "FFlagRemoveSubMenuTopBarConstants": true,
     "FFlagLCCheckCageDimNonSkinnedNonUniform": true,
-    "FFlagRemoveKDTree2_IXP": "1;Portal.FFlagRemoveKDTree2;FFlagRemoveKDTree2;719251750;flagbank",
     "FFlagLegacyAccessoryCheckCategory": true,
     "FFlagLuauVectorFolding": true,
     "DFFlagMicroprofilerThreadSearch": true,
@@ -9745,24 +9743,12 @@
     "FFlagAXDisableBundleTrade": true,
     "FFlagAXEnableCollectiblePurchaseInfoParamRefactor": true,
     "FFlagFCUpdateNormalsOnlyForLCs": true,
-    "DFFlagDisconnectCodeUseEnum2": true,
-    "FFlagRemoveUnusedAccountInfoRequest_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:06:13",
-    "FFlagStudioPreAllocateUniqueIdCollisionDetectorMaps_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:08:38",
-    "FFlagEnablePlatformSocialGraphSync1": true,
-    "FFlagPathfindingUseImprovedSearch4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:18:13",
-    "AxisAdornmentGrabSize": 12,
-    "AllowVideoPreRoll": true,
     "FFlagInExperienceMenuCanvasGroupsInvisible": true,
     "FFlagAXEnableItemOwnershipPageResellableFix": true,
     "FFlagAXEnableSelectItemPromptRefactor": true,
     "FFlagAXEnableItemOwnershipPageSerialFix": true,
     "FFlagGuiServiceDeferGLCModifyUpdateVector": true,
     "FFlagRemovePSMListenerForDialog": true,
-    "FFlagThirdPartyTextChatPermissionsApiEnabled1_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:40:15",
-    "CaptureCountersIntervalInMinutes": 5,
-    "FFlagEnableLocationRecordingDeltaFiltering_Staged": "false;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:49:44",
-    "DFFlagMakeBezierEvaluationFast2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:53:16",
-    "DFIntNavigationRasterizeTileSlowReportThreshold_Rollout": "10000;60;2025-01-21T22:55:41",
     "FFlagAXFixFloatingAvatar": true,
     "FFlagAutoSetupMissingDynamicHeadAllowed": true,
     "FFlagAvatarPreviewerBetterUI2": true,
@@ -9770,6 +9756,42 @@
     "FFlagAvatarPreviewerSafeCharaterEncoding": true,
     "FFlagAvatarPreviewerUseHeadPreviewWithMotor6D": true,
     "FFlagHumanoidModelScalingFix": true,
+    "FFlagStudioPreAllocateUniqueIdCollisionDetectorMaps": true,
+    "FFlagRemoveUnusedAccountInfoRequest": true,
+    "FFlagAXShareAvatarPromptEasyDismiss": true,
+    "FFlagLuaAppFixOmniFeedRefreshEffect": true,
+    "DFFlagDisconnectCodeUseEnum2": true,
+    "FFlagThirdPartyTextChatPermissionsApiEnabled1": true,
+    "FFlagEnableLocationRecording": false,
+    "FFlagEnableLocationRecordingDeltaFiltering": false,
+    "DFFlagMakeBezierEvaluationFast2": true,
+    "DFFlagAndroidOnTrimMemoryLevelTelemetry": true,
+    "FFlagWindowsAppBuildVariant": true,
+    "FFlagAvatarPreviewerCheckFaceItems": true,
+    "FFlagNoHashingScalingValues": true,
+    "FFlagFixGameTileViewActivatedCallback": true,
+    "FStringRewardedVideoAdsUniverseIdAllowlist": "1202096104,184199275,2549475383,4908792642,5422546686",
+    "FFlagEnableHideSystemCardLocalUserAvatar": true,
+    "FFlagRenderChatConversationOnlyWhenVisible": true,
+    "FFlagRequireByStringFixRequireTracingForInit_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T18:38:37",
+    "FFlagRequireByStringTracingEnabled_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T18:39:58",
+    "FFlagVideoStreamAdaptiveBitrate3": true,
+    "FFlagRequireByStringErrorImprovements_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T18:52:40",
+    "DFFlagEnableRccOomDMDump": true,
+    "DFFlagUseMemoryProfiler2": true,
+    "FFlagFixMappedSignalRaceCondition": true,
+    "FFlagStudio3dViewFocusOnCreateConstraint2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T19:11:11",
+    "FFlagUseBubbleChatBillboardV4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T19:14:14",
+    "FFlagGamePassGameDetailsForce": true,
+    "FFlagRequireByStringEnabled": true,
+    "FFlagRobloxTelemetryUseEventIngestBatchEvent22_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T19:26:21",
+    "FFlagStudioContextExpressionTypes3": true,
+    "FFlagStudioClipboardContext": true,
+    "FFlagStudioInternalWaitForLongProcessButton": true,
+    "FFlagPackagifySettingsShowSignal": true,
+    "AllowVideoPreRoll": true,
+    "AxisAdornmentGrabSize": 12,
+    "CaptureCountersIntervalInMinutes": 5,
     "CaptureQTStudioCountersEnabled": true,
     "DFFlagCyclicExecutiveThrottlingCancelWorldStepAccum": false,
     "DFFlagEnableRemoteProfiling": true,
@@ -9982,7 +10004,6 @@
     "FFlagTrackDeeplinkLaunchFlow": true,
     "FLogDataModelPatchAnalytics": 6,
     "FStringCustomizeNameModalOpened": "CustomizeNameModalOpenediOS",
-    "FFlagEnableLocationRecording": false,
     "FStringCapturesActivatedInGameMenu": "CapturesActivatedInGameMenuiOS",
     "FStringCapturesCarouselOpened": "CapturesCarouselOpenediOS",
     "FStringCapturesDeactivatedInGameMenu": "CapturesDeactivatedInGameMenuiOS",
@@ -10361,7 +10382,6 @@
     "FFlagAXLookComposerPolish2": true,
     "FFlagLuaAppFiatPaidAccess": true,
     "FFlagEditProfileScrollable": true,
-    "FFlagAXShareAvatarPromptEasyDismiss": true,
     "FFlagEnableExpChatVoiceUIImprovements6": true,
     "FFlagIsSeamlessVoiceCheckBugfix": true,
     "FFlagAppendBodyPartToTitle": true,
@@ -10404,12 +10424,12 @@
     "FFlagAXUseNewItemGroupWidgetComponent2": true,
     "FFlagAXNewItemGroupAllowExpandedStateThroughProp": true,
     "FFlagMicroprofileGameSettingsFix": true,
-    "FFlagLuaAppFixOmniFeedRefreshEffect": true,
     "FFlagLuaAppRewriteTokenRefresh": true,
     "FFlagReshufflePartyIconsInUnibar": true,
     "FFlagAXFixMySharedAvatarMutedError": true,
-    "FStringFlagRepoGitHashFastString": "6a72ccff755ff295b4b63e02c2d6f05023f971e7",
-    "DFStringFlagRepoGitHashDynamicString": "6a72ccff755ff295b4b63e02c2d6f05023f971e7",
-    "FStringFlipTimeStampFastString": "2025-01-21T23:07:18.348Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-21T23:07:18.348Z"
+    "FFlagAXSendLegacyWidgetImpressions": true,
+    "FStringFlagRepoGitHashFastString": "92d141dbb9b3ca92283d03193ae7082cf41479ea",
+    "DFStringFlagRepoGitHashDynamicString": "92d141dbb9b3ca92283d03193ae7082cf41479ea",
+    "FStringFlipTimeStampFastString": "2025-01-22T19:37:15.803Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-22T19:37:15.803Z"
 }
