--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -8714,7 +8714,6 @@
     "FFlagRbxStorageSkipOldCacheSize": true,
     "FFlagStudioDockingDisableCorruptionChecks": false,
     "DFFlagSessionTrackingAddAndroidSocAndSku": true,
-    "FFlagNavigationUseBuildImprovedRegions4": true,
     "FFlagPathfindingSupportPartialPath4": true,
     "FFlagPathfindingUseImprovedSearch4": true,
     "FFlagLegacyFindReplaceUsageTelemetry": true,
@@ -9148,7 +9147,7 @@
     "DFIntSessionTrackingSendType": 2,
     "FFlagLuaAppLoadOtaPackagesOnStart2": true,
     "FFlagEditableImageTelemetryUpdates": true,
-    "DFIntNavigationRasterizeTileSlowReportThreshold": 200,
+    "DFIntNavigationRasterizeTileSlowReportThreshold": 10000,
     "FFlagAssetImportUploadWidgetCleanup3": true,
     "FFlagRibbonEnableSliderLua": true,
     "FIntOtaLoaderCheckpointEventHundredthsPercent": 1,
@@ -9634,7 +9633,6 @@
     "FIntReactMicroprofilerLevel2": 1,
     "FFlagRemoveSubMenuTopBarConstants": true,
     "FFlagLCCheckCageDimNonSkinnedNonUniform": true,
-    "FFlagRemoveKDTree2_IXP": "1;Portal.FFlagRemoveKDTree2;FFlagRemoveKDTree2;719251750;flagbank",
     "FFlagLegacyAccessoryCheckCategory": true,
     "FFlagLuauVectorFolding": true,
     "DFFlagMicroprofilerThreadSearch": true,
@@ -9745,24 +9743,12 @@
     "FFlagAXDisableBundleTrade": true,
     "FFlagAXEnableCollectiblePurchaseInfoParamRefactor": true,
     "FFlagFCUpdateNormalsOnlyForLCs": true,
-    "DFFlagDisconnectCodeUseEnum2": true,
-    "FFlagRemoveUnusedAccountInfoRequest_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:06:13",
-    "FFlagStudioPreAllocateUniqueIdCollisionDetectorMaps_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:08:38",
-    "FFlagEnablePlatformSocialGraphSync1": true,
-    "AxisAdornmentGrabSize": 12,
-    "FFlagAXShareAvatarPromptEasyDismiss_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:23:04",
-    "AllowVideoPreRoll": true,
     "FFlagInExperienceMenuCanvasGroupsInvisible": true,
     "FFlagAXEnableItemOwnershipPageResellableFix": true,
     "FFlagAXEnableSelectItemPromptRefactor": true,
     "FFlagAXEnableItemOwnershipPageSerialFix": true,
     "FFlagGuiServiceDeferGLCModifyUpdateVector": true,
     "FFlagRemovePSMListenerForDialog": true,
-    "FFlagThirdPartyTextChatPermissionsApiEnabled1_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:40:15",
-    "FFlagEnableLocationRecording_Staged": "false;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:49:44",
-    "FFlagEnableLocationRecordingDeltaFiltering_Staged": "false;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:49:44",
-    "DFFlagMakeBezierEvaluationFast2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:53:16",
-    "DFIntNavigationRasterizeTileSlowReportThreshold_Rollout": "10000;60;2025-01-21T22:55:41",
     "FFlagAXFixFloatingAvatar": true,
     "FFlagAutoSetupMissingDynamicHeadAllowed": true,
     "FFlagAvatarPreviewerBetterUI2": true,
@@ -9770,7 +9756,39 @@
     "FFlagAvatarPreviewerSafeCharaterEncoding": true,
     "FFlagAvatarPreviewerUseHeadPreviewWithMotor6D": true,
     "FFlagHumanoidModelScalingFix": true,
-    "DFFlagAndroidOnTrimMemoryLevelTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T23:08:49",
+    "FFlagStudioPreAllocateUniqueIdCollisionDetectorMaps": true,
+    "FFlagRemoveUnusedAccountInfoRequest": true,
+    "FFlagAXShareAvatarPromptEasyDismiss": true,
+    "FFlagLuaAppFixOmniFeedRefreshEffect": true,
+    "DFFlagDisconnectCodeUseEnum2": true,
+    "FFlagThirdPartyTextChatPermissionsApiEnabled1": true,
+    "FFlagEnableLocationRecording": false,
+    "FFlagEnableLocationRecordingDeltaFiltering": false,
+    "DFFlagMakeBezierEvaluationFast2": true,
+    "DFFlagAndroidOnTrimMemoryLevelTelemetry": true,
+    "FFlagWindowsAppBuildVariant": true,
+    "FFlagAvatarPreviewerCheckFaceItems": true,
+    "FFlagNoHashingScalingValues": true,
+    "FFlagFixGameTileViewActivatedCallback": true,
+    "FStringRewardedVideoAdsUniverseIdAllowlist": "1202096104,184199275,2549475383,4908792642,5422546686",
+    "FFlagEnableHideSystemCardLocalUserAvatar": true,
+    "FFlagRenderChatConversationOnlyWhenVisible": true,
+    "FFlagVideoStreamAdaptiveBitrate3": true,
+    "AxisAdornmentGrabSize": 12,
+    "DFFlagEnableRccOomDMDump": true,
+    "DFFlagUseMemoryProfiler2": true,
+    "FFlagFixMappedSignalRaceCondition": true,
+    "AllowVideoPreRoll": true,
+    "FFlagUseBubbleChatBillboardV4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T19:14:14",
+    "FFlagGamePassGameDetailsForce": true,
+    "FFlagRequireByStringEnabled": true,
+    "FFlagRobloxTelemetryUseEventIngestBatchEvent22_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T19:26:21",
+    "FFlagStudioContextExpressionTypes3": true,
+    "FFlagStudioClipboardContext": true,
+    "FFlagStudioInternalWaitForLongProcessButton": true,
+    "FFlagPackagifySettingsShowSignal": true,
+    "FFlagRequireByStringFixRequireTracingForInit": true,
+    "FFlagRequireByStringTracingEnabled": true,
     "CaptureCountersIntervalInMinutes": 5,
     "CaptureQTStudioCountersEnabled": true,
     "DFFlagCyclicExecutiveThrottlingCancelWorldStepAccum": false,
@@ -10511,7 +10529,6 @@
     "FFlagCatchHttpErrorCode": true,
     "FFlagConvAIFixSpamOnReload": true,
     "FFlagDisableClickableErrorsBundlePublish": true,
-    "FFlagAvatarPreviewerCheckFaceItems": true,
     "FIntAutoSaveTimeoutIntervalMs": 30000,
     "DFIntLuauTypeSolverRelease": 649,
     "FFlagStartPageTrackLinkOrigin": true,
@@ -10586,8 +10603,6 @@
     "FFlagAvoidWaypointForCollaboratorLSPConnections": true,
     "FFlagImproveChangeHistoryParallel": true,
     "FFlagDraggerVerbsComponentization2": true,
-    "FFlagRequireByStringEnabled": true,
-    "FFlagRequireByStringTracingEnabled": true,
     "DFFlagSimCloseVoxelBadMeshTelemetry": true,
     "DFFlagSimDCDEnableWithoutRollout2": true,
     "DFIntSimCloseVoxelBadMeshTelemetryHundredthsPercentage": 100,
@@ -10638,7 +10653,6 @@
     "FFlagLegacyBulkImporterApiMigration": true,
     "FFlagStudioMoveStandaloneScope3": true,
     "FFlagRequireByStringErrorImprovements": true,
-    "FFlagRequireByStringFixRequireTracingForInit": true,
     "FFlagStudioFixCookieMismatchAndRaceProblem": true,
     "FFlagStudioUpdateAnchorStatusOnlyWhenChanged": true,
     "FFlagStudioFixDialogImageManagerCrash": true,
@@ -10696,7 +10710,6 @@
     "FFlagLuauNewSolverVisitErrorExprLvalues": true,
     "FFlagDevFrameworkAlertWrapping": true,
     "FFlagFFlagAutoSetupMissingDynamicHeadAllowed": true,
-    "FFlagNoHashingScalingValues": true,
     "FFlagShowDevicePermissionsModal3": true,
     "FFlagAvatarPreviewerUseAnyModel5": true,
     "FFlagCSG4StudioBetaFeature": true,
@@ -10721,6 +10734,7 @@
     "FFlagAddStudioPlayTestSessionIdToAssetDeliveryRequest": true,
     "FFlagCheckSignatureHelpForCallBeforeTypecheck": true,
     "FFlagUserDefinedFunctionDocumentationAttributeSupport": true,
+    "FFlagNavigationUseBuildImprovedRegions4": true,
     "FFlagStudioActionComponentInterface3": false,
     "FFlagAvatarPreviewerUseAnyModel6": true,
     "FFlagPluginActionTextChanging": true,
@@ -10811,7 +10825,6 @@
     "FFlagAXAccessoryAdjustmentFtuxFlush": true,
     "FFlagFixParseProxyWrap": true,
     "FFlagTerrainEditorNoActivate": true,
-    "FFlagStudioContextExpressionTypes3": true,
     "FFlagCOLLAB6176PlaceAnnotationsStudio2": true,
     "FStringSaveOptimizationDocsLinkString": "https://create.roblox.com/docs/projects/place-files",
     "FFlagSpeedUpScriptRegistrationService": true,
@@ -10848,8 +10861,6 @@
     "DFFlagSimRemoveRecursionsForDeepTrees_PlaceFilter": "true;166986752",
     "DFFlagSimAeroEnableYieldInMeshProcessing": true,
     "FFlagLuaStartPageFetchUniverseDataInLua": true,
-    "FFlagStudioClipboardContext": true,
-    "FFlagStudioInternalWaitForLongProcessButton": true,
     "FFlagStudioFetchABTestConfigAsync": true,
     "FFlagStudioMoveDisableUserPluginCliArg": true,
     "FFlagAXMigrateToRobloxTelemetryApi": true,
@@ -10877,7 +10888,6 @@
     "FFlagStudioPlayTestModeSettingContext": true,
     "FFlagStudioTCCEnabledTooEarlyBugfix": true,
     "FFlagLuaStartPageShowOSDeprecationBanner": true,
-    "FFlagLuaAppFixOmniFeedRefreshEffect": true,
     "FFlagFixCancellableDialogManagerOnDialogShownCrash": true,
     "FFlagBulkImportUpdateErrorMessages": true,
     "DFFlagSkipInternalScriptCodegenErrorMessage": true,
@@ -10891,9 +10901,10 @@
     "FFlagStudioAddMaterialPickerNewRibbon": true,
     "FFlagLuaStartPageTour3BannerLayoutFix": true,
     "FFlagTutorialsFixTour3WedgeStep": true,
-    "FFlagGetWidgetLuau_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:43:18",
-    "DFFlagSetNoCollisionConstraintEnabledWakeUp_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:50:09",
-    "FFlagStartPageTemplatesAlwaysGrid_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:59:52",
+    "FFlagGetWidgetLuau": true,
+    "DFFlagSetNoCollisionConstraintEnabledWakeUp": true,
+    "FFlagStartPageTemplatesAlwaysGrid": true,
+    "FFlagLuauAllowNilAssignmentToIndexer": true,
     "FFlagRenderEnableGlobalInstancingD3D11": true,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
@@ -11028,7 +11039,6 @@
     "FFlagEnableExpChatVoiceUIImprovements6": true,
     "FFlagIsSeamlessVoiceCheckBugfix": true,
     "DFIntTextChatTelemetrySendAsyncFailureThrottlePermyriad": 7500,
-    "FFlagVideoStreamAdaptiveBitrate3": true,
     "FFlagAllowDisconnectGuiForOkUnknown": true,
     "DFLogLogOnDMSetShuttingDown": 3,
     "DFFlagEXPCHAT1499Telemetry": true,
@@ -11051,12 +11061,13 @@
     "FFlagAXUseNewItemGroupWidgetComponent2": true,
     "FFlagCapturesOpenInVideos": true,
     "FFlagSaveVideoCapturesToVideosFolder": true,
-    "DFFlagPreemptCrashpadExceptionHandlerOnWindows": true,
     "FFlagImproveMicroprofilerReadability": true,
-    "DFFlagVisBugFixCylinderSpecialMeshScale_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:52:16",
-    "DFFlagVisBugFixVR_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:53:20",
-    "DFFlagVisBugFixBlockTelemetry_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-21T22:53:57",
     "DFFlagOptimizePropertyGetSet": true,
+    "DFFlagVisBugFixBlockTelemetry": true,
+    "DFFlagVisBugFixCylinderSpecialMeshScale": true,
+    "DFFlagVisBugFixVR": true,
+    "FFlagDenseHashTableKeepMemoryThroughClear": true,
+    "FFlagVideoCapturesMetadataLoadingFix": true,
     "FFlagDebugLuaAppValidateProps": true,
     "FStringFeature_CookieProtocolEnabled": "524;100",
     "FFlagUseParallelTypecheckInLSP2": true,
@@ -11080,8 +11091,8 @@
     "FFlagScriptSyncM2_5BetaFeature": true,
     "FFlagLuaStartPagePlaceOpenAttributionTelemetry": true,
     "FFlagCacheReadParsePolicy": true,
-    "FStringFlagRepoGitHashFastString": "cc9276b7ebdb42f8a75878389b7718a0fc005cb7",
-    "DFStringFlagRepoGitHashDynamicString": "cc9276b7ebdb42f8a75878389b7718a0fc005cb7",
-    "FStringFlipTimeStampFastString": "2025-01-21T23:10:45.758Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-21T23:10:45.758Z"
+    "FStringFlagRepoGitHashFastString": "114c1f7eb8ddfeed9f2badf2676426d6bbce2521",
+    "DFStringFlagRepoGitHashDynamicString": "114c1f7eb8ddfeed9f2badf2676426d6bbce2521",
+    "FStringFlipTimeStampFastString": "2025-01-22T19:42:29.860Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-22T19:42:29.860Z"
 }
