--- a/AndroidApp.json
+++ b/AndroidApp.json
@@ -9773,8 +9773,6 @@
     "FStringRewardedVideoAdsUniverseIdAllowlist": "1202096104,184199275,2549475383,4908792642,5422546686",
     "FFlagEnableHideSystemCardLocalUserAvatar": true,
     "FFlagRenderChatConversationOnlyWhenVisible": true,
-    "FFlagRequireByStringFixRequireTracingForInit_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T18:38:37",
-    "FFlagRequireByStringTracingEnabled_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T18:39:58",
     "FFlagVideoStreamAdaptiveBitrate3": true,
     "FFlagRequireByStringErrorImprovements_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T18:52:40",
     "DFFlagEnableRccOomDMDump": true,
@@ -9789,6 +9787,9 @@
     "FFlagStudioClipboardContext": true,
     "FFlagStudioInternalWaitForLongProcessButton": true,
     "FFlagPackagifySettingsShowSignal": true,
+    "FFlagRequireByStringFixRequireTracingForInit": true,
+    "FFlagRequireByStringTracingEnabled": true,
+    "FFlagImproveRequireParameterType_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T19:44:20",
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -10434,8 +10435,8 @@
     "FFlagVideoFixEncryptedAlignment": true,
     "DisableMultiDex": true,
     "FFlagVideoCapturesMetadataLoadingFix": true,
-    "FStringFlagRepoGitHashFastString": "92d141dbb9b3ca92283d03193ae7082cf41479ea",
-    "DFStringFlagRepoGitHashDynamicString": "92d141dbb9b3ca92283d03193ae7082cf41479ea",
-    "FStringFlipTimeStampFastString": "2025-01-22T19:37:15.803Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-22T19:37:15.803Z"
+    "FStringFlagRepoGitHashFastString": "01973800e45ed49df67d6b31cc5b73a43dd003d2",
+    "DFStringFlagRepoGitHashDynamicString": "01973800e45ed49df67d6b31cc5b73a43dd003d2",
+    "FStringFlipTimeStampFastString": "2025-01-22T19:46:19.502Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-22T19:46:19.502Z"
 }
