--- a/MacStudioApp.json
+++ b/MacStudioApp.json
@@ -9789,6 +9789,7 @@
     "FFlagPackagifySettingsShowSignal": true,
     "FFlagRequireByStringFixRequireTracingForInit": true,
     "FFlagRequireByStringTracingEnabled": true,
+    "FFlagImproveRequireParameterType_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-22T19:44:20",
     "CaptureCountersIntervalInMinutes": 5,
     "CaptureQTStudioCountersEnabled": true,
     "DFFlagCyclicExecutiveThrottlingCancelWorldStepAccum": false,
@@ -11089,8 +11090,8 @@
     "FFlagScriptSyncM2_5BetaFeature": true,
     "FFlagLuaStartPagePlaceOpenAttributionTelemetry": true,
     "FFlagCacheReadParsePolicy": true,
-    "FStringFlagRepoGitHashFastString": "114c1f7eb8ddfeed9f2badf2676426d6bbce2521",
-    "DFStringFlagRepoGitHashDynamicString": "114c1f7eb8ddfeed9f2badf2676426d6bbce2521",
-    "FStringFlipTimeStampFastString": "2025-01-22T19:42:29.860Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-22T19:42:29.860Z"
+    "FStringFlagRepoGitHashFastString": "01973800e45ed49df67d6b31cc5b73a43dd003d2",
+    "DFStringFlagRepoGitHashDynamicString": "01973800e45ed49df67d6b31cc5b73a43dd003d2",
+    "FStringFlipTimeStampFastString": "2025-01-22T19:46:19.502Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-22T19:46:19.502Z"
 }
