--- a/PCClientBootstrapper.json
+++ b/PCClientBootstrapper.json
@@ -188,6 +188,8 @@
     "FFlagMacInstallerFixRemovingZip": true,
     "FFlagAXMigrateToRobloxTelemetryApi": true,
     "FFlagWinInstallerCheckCRCBeforeUnzip": true,
+    "DFFlagSetNoCollisionConstraintEnabledWakeUp": true,
+    "FFlagAssemblyRBXArrayToSmallVector": true,
     "FFlagWindowsBootstrapperAdditionalCdnDiagnostics2": true,
     "FFlagBootstrapperEnableOptOutDUAR": true,
     "FStringWindowsProgressiveDownloadExperimentBucketSettings": "10-1",
@@ -202,8 +204,8 @@
     "InfluxHundredthsPercentage": 0,
     "InfluxInstallHundredthsPercentage": 10000,
     "ShowInstallSuccessPrompt": true,
-    "FStringFlagRepoGitHashFastString": "d00892e4cfdef9b5711d9dbb0944cf7fe129a067",
-    "DFStringFlagRepoGitHashDynamicString": "d00892e4cfdef9b5711d9dbb0944cf7fe129a067",
-    "FStringFlipTimeStampFastString": "2025-01-23T17:39:34.208Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-23T17:39:34.208Z"
+    "FStringFlagRepoGitHashFastString": "a8af3f06c1c8ecd88b0de6b4742c20a8b30f43c8",
+    "DFStringFlagRepoGitHashDynamicString": "a8af3f06c1c8ecd88b0de6b4742c20a8b30f43c8",
+    "FStringFlipTimeStampFastString": "2025-01-24T19:52:53.312Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-24T19:52:53.312Z"
 }
