--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -9816,6 +9816,14 @@
     "FFlagFixTextureSwapping": true,
     "DFFlagInternalExportAllowCSGDecomp2": true,
     "FFlagSongbirdFixReportModalShownBehavior": true,
+    "FFlagPartyVoiceIdleDontReconnect": true,
+    "DFIntPartyVoiceLaunchFlowTelemetryThrottle": 10000,
+    "FFlagPartyVoiceSidFix": true,
+    "FFlagMakePSJoinSessionAsync2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T19:36:12",
+    "FStringRewardedVideoAdsUniverseIdAllowlist_Rollout": "1202096104,184199275,2549475383,4908792642,5422546686,5854268910,5365602722,4092381073,994732206,2486209385,2549456912;60;2025-01-27T19:36:16",
+    "FFlagMacEvenBetterTrackpadScrolling_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T19:55:56",
+    "FIntAvatarAutosetupPollingTimeoutSeconds_Staged": "1800;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T20:03:28",
+    "DFFlagUseVisBugChecks": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -10968,6 +10976,13 @@
     "DFFlagSkipCapabilityBasedPropDesc": true,
     "DFFlagSkipInaccessiblePropDesc2": true,
     "FFlagLuaStartPageTeamCreateStatus": true,
+    "DFFlagLuauPopIncompleteCi": true,
+    "FFlagConvAIMockExecuteCommandAsyncLogs": true,
+    "FFlagConvAIReplaceParagraphSeparators": true,
+    "FFlagLuauFixFunctionNameStartPosition": true,
+    "FFlagEnableExpJoinMicPermAnalytics_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T19:15:45",
+    "FFlagExplorerFilteringNoCap_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T19:23:08",
+    "FStringEnableStudioTestingRewardedVideoAdsPlayerAllowList_Rollout": "1202096104,184199275,2549475383,4908792642,5422546686,5854268910,5365602722,4092381073,994732206,2486209385,2549456912;60;2025-01-27T19:36:16",
     "FFlagRenderEnableGlobalInstancingD3D11": true,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
@@ -11117,7 +11132,6 @@
     "FFlagAXNewItemGroupIncrementalHydration2": true,
     "DFIntMemCacheMaxCapacityMB": 32,
     "FIntSQLiteCacheSizePages": 4096,
-    "DFFlagUseVisBugChecks": true,
     "DFFlagRakNetMissingPing2": true,
     "FFlagAXCarouselCanvasWidthFix": true,
     "FFlagAXUseNewItemGroupWidgetComponent2": true,
@@ -11133,6 +11147,8 @@
     "FFlagCheckShouldShowJoinVoiceInEvent": true,
     "FFlagReportMeshesUploadTelemetry": true,
     "FFlagLuaAppFixSponsoredGridTile": true,
+    "FFlagUIDragDetectorFixFrameDestroyCrashOnDragEnd": true,
+    "FFlagWindowsFixCustomSchemaLinks_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T19:49:50",
     "FFlagDebugLuaAppValidateProps": true,
     "FStringFeature_CookieProtocolEnabled": "524;100",
     "FFlagUseParallelTypecheckInLSP2": true,
@@ -11156,8 +11172,8 @@
     "FFlagScriptSyncM2_5BetaFeature": true,
     "FFlagLuaStartPagePlaceOpenAttributionTelemetry": true,
     "FFlagCacheReadParsePolicy": true,
-    "FStringFlagRepoGitHashFastString": "9dd67187802a37ef1dff6c0361fdefe19eab2338",
-    "DFStringFlagRepoGitHashDynamicString": "9dd67187802a37ef1dff6c0361fdefe19eab2338",
-    "FStringFlipTimeStampFastString": "2025-01-24T22:55:26.413Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-24T22:55:26.413Z"
+    "FStringFlagRepoGitHashFastString": "c9879635578b86105c40b12e6397caa82ab29140",
+    "DFStringFlagRepoGitHashDynamicString": "c9879635578b86105c40b12e6397caa82ab29140",
+    "FStringFlipTimeStampFastString": "2025-01-27T20:12:07.044Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-27T20:12:07.044Z"
 }
