--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -9762,7 +9762,7 @@
     "FFlagAvatarPreviewerCheckFaceItems": true,
     "FFlagNoHashingScalingValues": true,
     "FFlagFixGameTileViewActivatedCallback": true,
-    "FStringRewardedVideoAdsUniverseIdAllowlist": "1202096104,184199275,2549475383,4908792642,5422546686,5854268910,5365602722,4092381073,994732206",
+    "FStringRewardedVideoAdsUniverseIdAllowlist": "1202096104,184199275,2549475383,4908792642,5422546686,5854268910,5365602722,4092381073,994732206,2486209385,2549456912",
     "FFlagEnableHideSystemCardLocalUserAvatar": true,
     "FFlagRenderChatConversationOnlyWhenVisible": true,
     "FFlagVideoStreamAdaptiveBitrate3": true,
@@ -9786,7 +9786,6 @@
     "FFlagVideoFixIsPreparedRace": true,
     "FFlagCIAmpUpsellEnabledForAll_v1": true,
     "FFlagUpdateEdpSocialMediaIcon": true,
-    "FFlagVideoVisibilityConsidersFrameSize2": true,
     "FFlagAXEnableItemOwnershipPageResellableFix": true,
     "FFlagAXEnableSelectItemPromptRefactor": true,
     "FFlagAXEnableItemOwnershipPageSerialFix": true,
@@ -9819,11 +9818,13 @@
     "FFlagPartyVoiceIdleDontReconnect": true,
     "DFIntPartyVoiceLaunchFlowTelemetryThrottle": 10000,
     "FFlagPartyVoiceSidFix": true,
-    "FFlagMakePSJoinSessionAsync2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T19:36:12",
-    "FStringRewardedVideoAdsUniverseIdAllowlist_Rollout": "1202096104,184199275,2549475383,4908792642,5422546686,5854268910,5365602722,4092381073,994732206,2486209385,2549456912;60;2025-01-27T19:36:16",
-    "FFlagMacEvenBetterTrackpadScrolling_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T19:55:56",
-    "FIntAvatarAutosetupPollingTimeoutSeconds_Staged": "1800;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T20:03:28",
     "DFFlagUseVisBugChecks": true,
+    "DFIntReportContextActionServiceBindEventsHundrethsPercent_Staged": "100;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T20:38:27",
+    "FFlagMakePSJoinSessionAsync2": true,
+    "FFlagForceConversationalAIScriptDiffTreatment_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T20:58:10",
+    "FFlagMacEvenBetterTrackpadScrolling": true,
+    "FIntAvatarAutosetupPollingTimeoutSeconds": 1800,
+    "DFIntRobloxTelemetryThrottlingTTMQMilestone0Mesh_Staged": "1000;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T21:23:23",
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -10948,7 +10949,7 @@
     "FFlagUGCValidatePreciseAttachmentErrorMessage": true,
     "FFlagUGCValidatePreciseVectorPrint": true,
     "FFlagEnableAudioDuckingAroundRewardedVideoAds3": true,
-    "FStringEnableStudioTestingRewardedVideoAdsPlayerAllowList": "1202096104,184199275,2549475383,4908792642,5422546686,5854268910,5365602722,4092381073,994732206",
+    "FStringEnableStudioTestingRewardedVideoAdsPlayerAllowList": "1202096104,184199275,2549475383,4908792642,5422546686,5854268910,5365602722,4092381073,994732206,2486209385,2549456912",
     "FFlagAliasSanityCheckTrimmedStringLength": true,
     "FFlagACERigValidation": true,
     "DFFlagEnableLuaAdPlayer": true,
@@ -10980,9 +10981,9 @@
     "FFlagConvAIMockExecuteCommandAsyncLogs": true,
     "FFlagConvAIReplaceParagraphSeparators": true,
     "FFlagLuauFixFunctionNameStartPosition": true,
-    "FFlagEnableExpJoinMicPermAnalytics_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T19:15:45",
-    "FFlagExplorerFilteringNoCap_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T19:23:08",
-    "FStringEnableStudioTestingRewardedVideoAdsPlayerAllowList_Rollout": "1202096104,184199275,2549475383,4908792642,5422546686,5854268910,5365602722,4092381073,994732206,2486209385,2549456912;60;2025-01-27T19:36:16",
+    "FFlagEnableExpJoinMicPermAnalytics": true,
+    "FFlagExplorerFilteringNoCap": true,
+    "FFlagLuauUserTypeFunFixInner_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T21:25:05",
     "FFlagRenderEnableGlobalInstancingD3D11": true,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
@@ -11148,7 +11149,8 @@
     "FFlagReportMeshesUploadTelemetry": true,
     "FFlagLuaAppFixSponsoredGridTile": true,
     "FFlagUIDragDetectorFixFrameDestroyCrashOnDragEnd": true,
-    "FFlagWindowsFixCustomSchemaLinks_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T19:49:50",
+    "FFlagReferredByPlayerIdParamForUrl_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2025-01-27T20:50:03",
+    "FFlagWindowsFixCustomSchemaLinks": true,
     "FFlagDebugLuaAppValidateProps": true,
     "FStringFeature_CookieProtocolEnabled": "524;100",
     "FFlagUseParallelTypecheckInLSP2": true,
@@ -11172,8 +11174,8 @@
     "FFlagScriptSyncM2_5BetaFeature": true,
     "FFlagLuaStartPagePlaceOpenAttributionTelemetry": true,
     "FFlagCacheReadParsePolicy": true,
-    "FStringFlagRepoGitHashFastString": "c9879635578b86105c40b12e6397caa82ab29140",
-    "DFStringFlagRepoGitHashDynamicString": "c9879635578b86105c40b12e6397caa82ab29140",
-    "FStringFlipTimeStampFastString": "2025-01-27T20:12:07.044Z",
-    "DFStringFlipTimeStampDynamicString": "2025-01-27T20:12:07.044Z"
+    "FStringFlagRepoGitHashFastString": "7a189731178bb3c09d042bb09f281d12d5aafd6b",
+    "DFStringFlagRepoGitHashDynamicString": "7a189731178bb3c09d042bb09f281d12d5aafd6b",
+    "FStringFlipTimeStampFastString": "2025-01-27T21:25:59.549Z",
+    "DFStringFlipTimeStampDynamicString": "2025-01-27T21:25:59.549Z"
 }
